[package]
name = "redis-state-machine"
description = "A state machine modules for Redis"
authors = ["Redis OSS <oss@redis.io>"]
license = "Redis Source Available License 2.0 (RSALv2) or the Server Side Public License v1 (SSPLv1)"
version = "99.99.99"
edition = "2021"
keywords = ["redis", "state-machine", "plugin"]
categories = ["database-implementations"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "redis_state"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = "1.0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.93"
try-catch = "0.2.2"
use = "0.0.0"


[build-dependencies]
regex = "1"
clap = "~2"
os_info = { version = "3", default-features = false }
